--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss": "^8.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "resend": "^4.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
